Update colors on links, news.

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -44,8 +44,7 @@ body {
     background-color: #ffffff;
 }
 a {
-    color: #E42E17;
-    /*color: #ad4340;*/
+    color: #e72c00;
     text-decoration: none;
     -webkit-transition: color 0.25s;
     -moz-transition: color 0.25s;
@@ -55,21 +54,20 @@ a {
     outline: 0;
 }
 a:hover {
-    /*color: #EF7247;*/
-    color: #EF7247;
+    color: #f07f79;
     text-decoration: none;
 }
 
 #venue a,
 #contact a,
 #footer a {
-    color: #EF7247;
+    color: #f07f79;
 }
 
 #venue a:hover,
 #contact a:hover,
 #footer a:hover {
-    color: #E42E17;
+    color: #e72c00;
 }
 
 h1, h2 {
@@ -95,7 +93,7 @@ h4, h5, h6 {
 
 .white-bg h1,
 .white-bg h2 {
-    color: #E42E17 !important;
+    color: #e72c00 !important;
 }
 .white-bg h3 {
     color: #585858;
@@ -140,7 +138,7 @@ sup {
     outline: 0;
 }
 .btn:hover, .btn:focus {
-    background-color: #e42e17;
+    background-color: #e72c00;
     color: white;
     -webkit-transition: 0.25s;
     -moz-transition: 0.25s;
@@ -164,7 +162,7 @@ sup {
     padding: 12px 19px 14px;
 }
 .btn.btn-primary {
-    background-color: #EF7247;
+    background-color: #f07f79;
 }
 .btn.btn-primary:hover, .btn.btn-primary:focus {
     background-color: #ff9966;
@@ -234,11 +232,11 @@ sup {
 }
 .btn.btn-link:hover, .btn.btn-link:focus {
     background-color: none;
-    color: #EF7247;
+    color: #f07f79;
 }
 .btn.btn-link:active, .btn.btn-link.active {
     background-color: none;
-    color: #EF7247;
+    color: #f07f79;
 }
 .btn.btn-inverse {
   background-color: #393E46;
@@ -400,7 +398,7 @@ input:focus:invalid:focus, textarea:focus:invalid:focus, select:focus:invalid:fo
 .top-bar .navbar .nav > li > a:hover, .top-bar.alt .navbar .nav > li > a:hover {
     color: #FFFFFF;
     /*background: #48A3A;*/
-    background: #E42E17;
+    background: #e72c00;
 }
 .top-bar .navbar .nav > li > a:focus, .top-bar.alt .navbar .nav > li > a:focus {
     color: #eee;
@@ -410,7 +408,7 @@ input:focus:invalid:focus, textarea:focus:invalid:focus, select:focus:invalid:fo
 .top-bar .nav .current a, .top-bar.alt .nav .current a {
     color: #FFFFFF;
     /*background: #4C5D67;*/
-    background: #E42E17;
+    background: #e72c00;
 }
 /* Top Bar Scroll Styles */
 .top-bar.alt {
@@ -515,7 +513,7 @@ nav select {
 #sponsors {
 }
 #news {
-    background: #EF7247;
+    background-color: #eee;
 }
 #newsitem {
     background: #ffffff;
@@ -711,7 +709,7 @@ hr.divider-short {
     background: #ad4340;
 }
 .icon-wrap.color2 {
-    background: #EF7247;
+    background: #f07f79;
 }
 .icon-wrap.color3 {
     background: #F2BC47;
@@ -1518,14 +1516,14 @@ a.instagram:hover {
     transition: all 0.4s ease-in-out;
 }
 .timeline-icon-container {
-    background: #EF7247; /* Old browsers */
-    /*background: -moz-linear-gradient(top, #EFEFEF 1%, #EF7247 100%); /* FF3.6+ */
-    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #EFEFEF), color-stop(100%, #EF7247)); /* Chrome,Safari4+ */
-    /*background: -webkit-linear-gradient(top, #EFEFEF 1%, #EF7247 100%); /* Chrome10+,Safari5.1+ */
-    /*background: -o-linear-gradient(top, #EFEFEF 1%, #EF7247 100%); /* Opera 11.10+ */
-    /*background: -ms-linear-gradient(top, #EFEFEF 1%, #EF7247 100%); /* IE10+ */
-    /*background: linear-gradient(to bottom, #EFEFEF 1%, #EF7247 100%); /* W3C */
-    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#EFEFEF', endColorstr='#EF7247', GradientType=0 ); /* IE6-9 */
+    background: #f07f79; /* Old browsers */
+    /*background: -moz-linear-gradient(top, #EFEFEF 1%, #f07f79 100%); /* FF3.6+ */
+    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #EFEFEF), color-stop(100%, #f07f79)); /* Chrome,Safari4+ */
+    /*background: -webkit-linear-gradient(top, #EFEFEF 1%, #f07f79 100%); /* Chrome10+,Safari5.1+ */
+    /*background: -o-linear-gradient(top, #EFEFEF 1%, #f07f79 100%); /* Opera 11.10+ */
+    /*background: -ms-linear-gradient(top, #EFEFEF 1%, #f07f79 100%); /* IE10+ */
+    /*background: linear-gradient(to bottom, #EFEFEF 1%, #f07f79 100%); /* W3C */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#EFEFEF', endColorstr='#f07f79', GradientType=0 ); /* IE6-9 */
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
