--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -486,9 +486,6 @@ nav select {
     padding: 60px 0;
     overflow: hidden;
 }
-#speakers {
-    background: #eee !important;
-}
 
 #judges, #speakers, #team {
     background: #eee !important;
@@ -685,7 +682,7 @@ hr.divider-short {
 }
 /* Icon Containers */
 .icon-wrap {
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: #CCC none repeat scroll 0px 0px;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -1983,3 +1980,144 @@ a.instagram:hover {
  width: 200px;
 }
 }
+
+/* PROFILE */
+
+.l-box {
+    padding: 16px;
+}
+
+.profile {
+    text-align: center;
+    background-color: #fff;
+    position: relative;
+    /*overflow: hidden;*/
+}
+
+.profile-padding {
+    padding: 1rem;
+}
+
+.profile-img {
+    width: 100%;
+}
+
+.profile h1,
+.profile h2,
+.profile h3,
+.profile h4,
+.profile h5,
+.profile h6 {
+    line-height: 1rem;
+    margin: 8px 0 4px 0;
+}
+
+.p-hr {
+    color: none;
+    border: none;
+    outline: none;
+    margin: 32px 0;
+}
+
+.profile .p-name {
+    line-height: 1.5;
+    color: #585858;
+}
+
+.profile .p-company,
+.profile .p-position {
+    font-weight: lighter;
+}
+
+.p-description,
+.profile .p-company,
+.profile .p-position {
+    color: #757575;
+}
+
+.profile .p-description {
+    font-size: 13px;
+    line-height: 1.4;
+    overflow: auto;
+    overflow-y: scroll;
+    height: 15em;
+}
+
+/*.blur-overlay {
+
+    position: fixed;
+    z-index: 50;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;    
+    background: pink;
+    -moz-box-shadow:    inset 0 0 10px rgba(255,255,255,1);
+    -webkit-box-shadow: inset 0 0 10px rgba(255,255,255,1);
+    box-shadow:         inset 0 0 10px rgba(255,255,255,1);
+}
+*/
+.profile .p-background-top {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 3em;
+}
+
+.p-description-title {
+    font-size: 16px;
+    color: #e72c00;
+}
+
+.profile .p-social {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    font-size: 0;
+    text-align: center;
+    padding: 16px;
+    background: #fff;
+    border-top: 1px solid #eee;
+}
+
+.profile .p-social-tab {
+    display: inline-block;
+    max-width: 100%;
+    min-width: 25%;
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.profile .background {
+    transition: all 0.5s;
+
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+
+    opacity: 0;
+
+    background: rgba(255,255,255,0.95);
+    text-align: left;
+}
+
+.profile:hover .background {
+    display: block;
+}
+
+.profile .background:hover {
+    opacity: 1;
+}
+
+img.profile-img {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
