--- a/Resources/views/partials/index/judges.html.twig
+++ b/Resources/views/partials/index/judges.html.twig
@@ -3,11 +3,11 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="module-header speakers-header">
+                    <div class="module-header jury-header">
                         <h4>Judges</h4>
                     </div>
                 </div>
-
+                
                 <div class="span12 hero-unit text-center">
                     <h2>This is the Jury</h2>
                 </div>
@@ -16,72 +16,84 @@
                     <div class="divider-space"></div>
                 </div>
 
+                <!-- START PEOPLES -->
                 <div class="span12">
-                    <div id="speakerscarousel" class="carouselslider speakers-carousel item-4">
-                        <ul>
-                        {% for judge in startupweekend_content('Judge') %}
-                            <li>
-                                <div class="item">
+                    <div class="people-container">
+                        {% for person in startupweekend_content('Judge') %}
+                        <!-- Profile START -->
+                        <div class="span3">
+                            <div class="profile-padding">
+                                <div class="profile">
+                                    <div class="foreground">
+                                        <div class="l-box">
+                                                <img class="profile-img" src="{{ person.avatar.file.thumbnails.person }}" alt=" {{ person.firstName }}">
+                                            <hr class="p-hr">
+                                            <h3 class="p-name">{{ person.firstName }}</h3>
 
-                                    <div class="photo-wrap hover_colour">
-                                        <img src="{{ judge.avatar.file.thumbnails.person }}" alt=" {{ judge.firstName }}">
-                                    </div>
-
-                                    <div class="text-wrap">
-                                        <h3>{{ judge.firstName }} {{ judge.lastName }}</h3>
-
-                                        {% if judge.occupation is defined %}
-                                            <h5>{{ judge.occupation }}</h5>
-                                        {% endif %}
-
-                                        {% if judge.company is defined %}
-                                            <h5>{{ judge.company }}</h5>
-                                        {% endif %}
-                                        <hr class="divider-short center" />
-                                        <p class="description">
-                                            {% if judge.company is defined %}
-                                                {{ judge.shortBio }}
-                                            {% else %}
-                                                Get to know more about him at the Event.
+                                            {% if person.company is defined %}
+                                                <h4 class="p-company">{{ person.company }}</h4>
                                             {% endif %}
-                                        </p>
+
+                                            {% if person.occupation is defined %}
+                                                <h5 class="p-position">{{ person.occupation }}</h5>
+                                            {% endif %}
+                                        </div>                                    
                                     </div>
+                                    <div class="background">
+                                        <div class="l-box">
+                                            <h2 class="p-description-title">{{ person.firstName }}</h2>
+                                            <p class="p-description">
+                                                {% if person.shortBio is defined %}
+                                                    {{ person.shortBio }}
+                                                {% else %}
+                                                    Get to know more about this person at the Event.
+                                                {% endif %}
+                                            </p>
 
-                                    <div class="social">
+                                            <div class="p-social">
+                                                {% if person.urlFacebook is defined %}
+                                                <div class="p-social-tab p-social-facebook">
+                                                    <a href="#" class="icon-wrap small facebook" title="Facebook">
+                                                        <i class="iconf-facebook"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
 
-                                        {% if judge.urlFacebook is defined %}
-                                            <a href="{{ judge.urlFacebook }}" class="icon-wrap small facebook" title="Facebook">
-                                                <i class="iconf-facebook"></i>
-                                            </a>
-                                        {% endif %}
+                                                {% if person.urlTwitter is defined %}
+                                                <div class="p-social-tab p-social-twitter">
+                                                    <a href="#" class="icon-wrap small twitter" title="Twitter">
+                                                        <i class="iconf-twitter"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
 
-                                        {% if judge.urlTwitter is defined %}
-                                        <a href="{{ judge.urlTwitter }}" class="icon-wrap small twitter" title="Twitter">
-                                            <i class="iconf-twitter"></i>
-                                        </a>
-                                        {% endif %}
+                                                {% if person.urlGoogle is defined %}
+                                                <div class="p-social-tab p-social-google">
+                                                    <a href="#" class="icon-wrap small google" title="Google+">
+                                                        <i class="iconf-gplus"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
 
-                                        {% if judge.urlGoogle is defined %}
-                                        <a href="{{ judge.urlGoogle }}" class="icon-wrap small google" title="Google+">
-                                            <i class="iconf-gplus"></i>
-                                        </a>
-                                        {% endif %}
+                                                {% if person.urlLinkedIn is defined %}
+                                                <div class="p-social-tab p-social-linkedin">
+                                                    <a href="#" class="icon-wrap small linkedin" title="LinkedIn">
+                                                        <i class="iconf-linkedin"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
+                                            </div>
 
-                                        {% if judge.urlLinkedIn is defined %}
-                                        <a href="{{ judge.urlLinkedIn }}" class="icon-wrap small linkedin" title="LinkedIn">
-                                            <i class="iconf-linkedin"></i>
-                                        </a>
-                                        {% endif %}
-
+                                        </div>
                                     </div>
-
                                 </div>
-                            </li>
+                            </div>
+                        </div>
+                        <!-- Profile END -->
                         {% endfor %}
-                        </ul>
                     </div>
                 </div>
-
+                <!-- END PEOPLES -->
             </div>
         </div>
     </section>
