--- a/Resources/views/partials/index/team.html.twig
+++ b/Resources/views/partials/index/team.html.twig
@@ -4,79 +4,96 @@
             <div class="row">
                 <div class="span12">
                     <div class="module-header team-header">
-                        <h4>Team</h4>
+                        <h4>Teams</h4>
                     </div>
                 </div>
-
+                
                 <div class="span12 hero-unit text-center">
                     <h2>Meet The Team</h2>
-                    {# <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam error eligendi tempore odit earum.</p> #}
                 </div>
 
                 <div class="span12">
                     <div class="divider-space"></div>
                 </div>
 
+                <!-- START PEOPLES -->
                 <div class="span12">
-                    <div id="speakerscarousel" class="carouselslider speakers-carousel item-4">
-                        <ul>
-                        {% for member in startupweekend_content('Team') %}
-                            <li>
-                                <div class="item">
+                    <div class="people-container">
+                        {% for person in startupweekend_content('Team') %}
+                        <!-- Profile START -->
+                        <div class="span3">
+                            <div class="profile-padding">
+                                <div class="profile">
+                                    <div class="foreground">
+                                        <div class="l-box">
+                                                <img class="profile-img" src="{{ person.avatar.file.thumbnails.person }}" alt=" {{ person.firstName }}">
+                                            <hr class="p-hr">
+                                            <h3 class="p-name">{{ person.firstName }}</h3>
 
-                                    <div class="photo-wrap hover_colour">
-                                        <img src="{{ asset(member.avatar.file.thumbnails.person) }}" alt=" {{ member.firstName }}">
-                                    </div>
-
-                                    <div class="text-wrap">
-                                        <h3>{{ member.firstName }} {{ member.lastName }}</h3>
-                                        <h5>{{ member.occupation }}</h5>
-                                        {% if member.company is defined %}
-                                            <h5>{{ member.company }}</h5>
-                                        {% endif %}
-                                        <hr class="divider-short center" />
-                                        <p class="description">
-                                            {% if member.shortBio is defined %}
-                                                {{ member.shortBio }}
+                                            {% if person.company is defined %}
+                                                <h4 class="p-company">{{ person.company }}</h4>
                                             {% endif %}
-                                        </p>
+
+                                            {% if person.occupation is defined %}
+                                                <h5 class="p-position">{{ person.occupation }}</h5>
+                                            {% endif %}
+                                        </div>                                    
                                     </div>
+                                    <div class="background">
+                                        <div class="l-box">
+                                            <h2 class="p-description-title">{{ person.firstName }}</h2>
+                                            <p class="p-description">
+                                                {% if person.shortBio is defined %}
+                                                    {{ person.shortBio }}
+                                                {% else %}
+                                                    Get to know more about this person at the Event.
+                                                {% endif %}
+                                            </p>
 
-                                    <div class="social">
+                                            <div class="p-social">
+                                                {% if person.urlFacebook is defined %}
+                                                <div class="p-social-tab p-social-facebook">
+                                                    <a href="#" class="icon-wrap small facebook" title="Facebook">
+                                                        <i class="iconf-facebook"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
 
-                                        {% if member.urlFacebook is defined %}
-                                            <a href="{{ member.urlFacebook }}" class="icon-wrap small facebook" title="Facebook">
-                                                <i class="iconf-facebook"></i>
-                                            </a>
-                                        {% endif %}
+                                                {% if person.urlTwitter is defined %}
+                                                <div class="p-social-tab p-social-twitter">
+                                                    <a href="#" class="icon-wrap small twitter" title="Twitter">
+                                                        <i class="iconf-twitter"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
 
-                                        {% if member.urlTwitter is defined %}
-                                        <a href="{{ member.urlTwitter }}" class="icon-wrap small twitter" title="Twitter">
-                                            <i class="iconf-twitter"></i>
-                                        </a>
-                                        {% endif %}
+                                                {% if person.urlGoogle is defined %}
+                                                <div class="p-social-tab p-social-google">
+                                                    <a href="#" class="icon-wrap small google" title="Google+">
+                                                        <i class="iconf-gplus"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
 
-                                        {% if member.urlGoogle is defined %}
-                                        <a href="{{ member.urlGoogle }}" class="icon-wrap small google" title="Google+">
-                                            <i class="iconf-gplus"></i>
-                                        </a>
-                                        {% endif %}
+                                                {% if person.urlLinkedIn is defined %}
+                                                <div class="p-social-tab p-social-linkedin">
+                                                    <a href="#" class="icon-wrap small linkedin" title="LinkedIn">
+                                                        <i class="iconf-linkedin"></i>
+                                                    </a>
+                                                </div>
+                                                {% endif %}
+                                            </div>
 
-                                        {% if member.urlLinkedIn is defined %}
-                                        <a href="{{ member.urlLinkedIn }}" class="icon-wrap small linkedin" title="LinkedIn">
-                                            <i class="iconf-linkedin"></i>
-                                        </a>
-                                        {% endif %}
-
+                                        </div>
                                     </div>
-
                                 </div>
-                            </li>
+                            </div>
+                        </div>
+                        <!-- Profile END -->
                         {% endfor %}
-                        </ul>
                     </div>
                 </div>
-
+                <!-- END PEOPLES -->
             </div>
         </div>
     </section>
