Added a click-activator for the map, so it won't trap you while scrolling.

--- a/Resources/views/partials/index/map.html.twig
+++ b/Resources/views/partials/index/map.html.twig
@@ -1,5 +1,12 @@
 <section id="map">
   <div id="map_canvas"></div>
   <!-- end Map Canvas -->
+  <div id="map_cover">
+    <div id="activate-box">
+        <div class="l-box">
+            <span class="activate">Press To Activate</span>        
+        </div>
+    </div>
+  </div>
 </section>
 <!-- end map -->
