--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -527,6 +527,7 @@ nav select {
     padding: 60px 0;
 }
 #map {
+    position: relative;
     background: #4C5D67;
     padding: 0;
 }
@@ -1991,6 +1992,10 @@ a.instagram:hover {
     text-align: center;
     background-color: #fff;
     position: relative;
+
+    border-right: 1px solid #DDD;
+    border-bottom: 1px solid #DDD;
+
     /*overflow: hidden;*/
 }
 
@@ -2121,3 +2126,58 @@ img.profile-img {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
+}
+
+/* END PROFILE */
+
+/* MAP */
+
+div#map_cover {
+    transition: background 0.2s;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(255,255,255,0.5);
+    width: 100%;
+    height: 100%;
+}
+
+div#map_cover:hover {
+    background: rgba(255,255,255,0.2);
+    cursor: pointer;
+}
+
+#map_cover #activate-box {
+    display: block;
+    position: absolute;
+
+    text-align: center;
+
+    margin: 0 auto;
+    top: 50%;
+    left: 0;
+    right: 0;
+    width: auto;
+
+    overflow: hidden;
+}
+
+#map_cover .activate {
+    transition: color 0.5s;
+    padding: 16px;
+    display: inline-block;
+    font-weight: lighter;
+    font-size: 24px;
+    font-family: sans-serif;
+
+    color: rgba(255,255,255,0.5);
+    background: rgba(0,0,0,0.3);
+    border-radius: 4px;
+}
+
+#map_cover:hover .activate {
+    color: rgba(255,255,255,0.9);
+    background: rgba(0,0,0,0.5);
+}
+
+/* END MAP */
