--- a/Resources/views/partials/index/persons.html.twig
+++ b/Resources/views/partials/index/persons.html.twig
@@ -40,7 +40,7 @@
                                             <div class="l-box">
                                                     <img class="profile-img" src="{{ person.avatar.file.thumbnails.person }}" alt=" {{ person.firstName }}">
                                                 <hr class="p-hr">
-                                                <h3 class="p-name">{{ person.firstName }}</h3>
+                                                <h3 class="p-name">{{ person.firstName + person.lastName }}</h3>
 
                                                 {% if person.company is defined %}
                                                     <h4 class="p-company">{{ person.company }}</h4>
