adjustet #id links in the navbar

--- a/Resources/views/Page/base.html.twig
+++ b/Resources/views/Page/base.html.twig
@@ -69,9 +69,9 @@
             <div class="nav-collapse collapse">
               <ul id="mainnav" class="nav">
                 <li><a href="{{ path('startupweekend_index') }}#about">About</a> </li>
-                <li><a href="{{ path('startupweekend_index') }}#judges">Judges</a></li>
+                <li><a href="{{ path('startupweekend_index') }}#judge">Judges</a></li>
                 <li><a href="{{ path('startupweekend_index') }}#venue">Venue</a> </li>
-                <li><a href="{{ path('startupweekend_index') }}#speakers">Mentors</a></li>
+                <li><a href="{{ path('startupweekend_index') }}#mentor">Mentors</a></li>
                 {# <li><a href="{{ path('startupweekend_index') }}#demo">Demo</a></li> #}
                 {% if coaches|default([])|length > 0 %}<li> <a href="{{ path('startupweekend_index') }}#speakers">Speakers</a> </li>{% endif %}
                 {# <li><a href="{{ path('startupweekend_index') }}#schedule">Schedule</a> </li> #}
