--- a/Resources/views/partials/index/persons.html.twig
+++ b/Resources/views/partials/index/persons.html.twig
@@ -56,7 +56,7 @@
                                                 <h2 class="p-description-title">{{ person.firstName }} {{ person.lastName }}</h2>
                                                 <p class="p-description">
                                                     {% if person.shortBio is defined %}
-                                                        {{ person.shortBio }}
+                                                        {{ person.shortBio|markdown }}
                                                     {% else %}
                                                         Get to know more about this person at the Event.
                                                     {% endif %}
