--- a/Resources/views/partials/index/persons.html.twig
+++ b/Resources/views/partials/index/persons.html.twig
@@ -58,7 +58,7 @@
                                                     {% if person.shortBio is defined %}
                                                         {{ person.shortBio|markdown }}
                                                     {% else %}
-                                                        Get to know more about this person at the Event.
+                                                        Get to know more about this person at the event.
                                                     {% endif %}
                                                 </p>
 
