Added Event Description

--- a/Resources/views/partials/index/about.html.twig
+++ b/Resources/views/partials/index/about.html.twig
@@ -37,6 +37,13 @@
       </div>
     </div>
     <!-- end row -->
+    <div class="span12 text-center">
+      <h3>Startup Weekend returns to Frankfurt/RheinMain!</h3>
+      <p>This time around the team is paying tribute to the rapidly growing financial technology (FinTech) community in Frankfurt. Together with leading heads of the financial sector, in the representative Silver Tower of the Deutsche Bahn AG, we will discover and promote innovative business ideas and new imaginative solutions. Startup Weekend is all about inspiring people to bring their ideas to life. Therefor we invite everyone with a fintech or non-fintech idea to take part in our event.
+      The financial industry has been in transition for some time. A variety of young businesses with unconventional services and products have flooded the market and turned long standing relationships inside out. No matter if it is Payment Services, Trading Software or Debit Management Solutions; the Startup Weekend FinTech wants to be a platform for exchanging and promoting innovative solutions to problems.
+      As a partner of the Startup Weekend, you will be listening to the pulse of the time. You will encounter the formation of new and disruptive ideas, and meet with the innovators and early adopters that will form the world of tomorrow.</p>
+    </div>
+    <!-- end row -->
   </div>
   <!--end container-->
 </section>
