updated facebook open graph preview image

--- a/Resources/views/Page/base.html.twig
+++ b/Resources/views/Page/base.html.twig
@@ -52,10 +52,13 @@
   <meta property="og:title" content="{{ title }}">
   <meta property="og:description" content="{{ description }}">
   <meta property="og:site_name" content="{{ title }}">
-  {% image '@FoundershubStartupWeekendBundle/Resources/public/images/logo.png' %}
-  <meta property="og:image" content="{{ app.request.uriForPath(asset_url) }}">
+
+  {% image '@FoundershubStartupWeekendBundle/Resources/public/images/swffm.png' %}
+    <meta property="og:image" content="{{ app.request.uriForPath(asset_url) }}">
   {% endimage %}
+
   <meta property="og:type" content="website">
+  <!-- END Facebook open graph support -->
 </head>
 
 <body>
