--- a/Resources/views/partials/index/persons.html.twig
+++ b/Resources/views/partials/index/persons.html.twig
@@ -32,7 +32,7 @@
                     <div class="people-container">
                         <div class="row">                            
                             {% for person in startupweekend_content(PersonType) %}
-                                {% if person.deleted != "true" %}
+                                {# {% if person.deleted != "true" %} #}
                                     <!-- Profile START -->
                                     <div class="span3">
                                         <div class="profile-padding">
@@ -114,7 +114,7 @@
                                         </div>
                                     </div>
                                     <!-- Profile END -->
-                                {% endif %}
+                                {# {% endif %} #}
                             {% endfor %}
                         </div>
                     </div>
