trigger an update

--- a/Resources/views/partials/index/about.html.twig
+++ b/Resources/views/partials/index/about.html.twig
@@ -1,3 +1,4 @@
+<!-- Start About -->
 <section id="about" class="x-section white-bg">
   <div class="container">
     <div class="row">
@@ -47,3 +48,4 @@
   </div>
   <!--end container-->
 </section>
+<!-- End About -->
