--- a/Resources/views/partials/index/sponsors.html.twig
+++ b/Resources/views/partials/index/sponsors.html.twig
@@ -41,10 +41,12 @@
         <div class="row">
             <div class="span12 text-center">
 {% endif %}
-                <a href="{{ sponsor.link }}" rel="friend met">
-                    <img src="{{ sponsor.logo.file.thumbnails.sponsor }}" alt="{{ sponsor.name }}"
-                         class="spnsr-logo spnsr-logo-{{ class|lower }}">
-                </a>
+                <div style="padding: 8px;">
+                    <a href="{{ sponsor.link }}" rel="friend met">
+                        <img src="{{ sponsor.logo.file.thumbnails.sponsor }}" alt="{{ sponsor.name }}"
+                             class="spnsr-logo spnsr-logo-{{ class|lower }}">
+                    </a>    
+                </div>
 {% if loop.last %}
         </div>
     </div>
