--- a/Resources/views/partials/index/sponsors.html.twig
+++ b/Resources/views/partials/index/sponsors.html.twig
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="span12 text-center">
 {% endif %}
-                <div style="padding: 8px;">
+                <div style="display: inline-block; padding: 8px;">
                     <a href="{{ sponsor.link }}" rel="friend met">
                         <img src="{{ sponsor.logo.file.thumbnails.sponsor }}" alt="{{ sponsor.name }}"
                              class="spnsr-logo spnsr-logo-{{ class|lower }}">
