--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1626,6 +1626,13 @@ a.instagram:hover {
     top: 2px;
 }
 
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
 
 /*  -----------------------------------------------------   /*
     RESPONSIVE
